--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -19,6 +19,12 @@
     "postCreateCommand": "yarn install",
         
     // Comment out the next line to run as root instead.
-    "remoteUser": "node"
+    "remoteUser": "node",
+	
+    "containerEnv": {
+        "AAA": "${containerWorkspaceFolder}",
+        "BBB": "${localWorkspaceFolderBasename}",
+        "CCC": "${containerWorkspaceFolderBasename}"
+    }
 
 }
