--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -5,7 +5,7 @@
 
 # To fully customize the contents of this image, use the following Dockerfile instead:
 # https://github.com/microsoft/vscode-dev-containers/tree/v0.112.0/containers/javascript-node-12/.devcontainer/Dockerfile
-FROM XXXmcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
+FROM mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
 
 # The image referenced above includes a non-root user with sudo access. Add
 # the "remoteUser" property to devcontainer.json to use it. On Linux, the container
@@ -13,9 +13,6 @@ FROM XXXmcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
 # or dockerFile property. Update USER_UID/USER_GID below if you are using the
 # dockerComposeFile property or want the image itself to start with different ID
 # values. See https://aka.ms/vscode-remote/containers/non-root-user for details.
-ARG USER_UID=1000
-ARG USER_GID=$USER_UID
-ARG USERNAME=node
 
 # [Optional] Update UID/GID if needed
 RUN if [ "$USER_GID" != "1000" ] || [ "$USER_UID" != "1000" ]; then \
