--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -2,7 +2,7 @@
     "name": "Node.js Sample",
     "dockerFile": "Dockerfile",
 
-    // Use 'settings' to set *default* container specific settings.json values on container create. 
+    // xUse 'settings' to set *default* container specific settings.json values on container create. 
     "settings": {
         "terminal.integrated.shell.linux": "/bin/bash"
     },
