change to startup task

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,6 +4,7 @@
     "version": "2.0.0",
     "tasks": [
         {
+            "runOptions": {"runOn": "folderOpen"},
             "label": "echo",
             "type": "shell",
             "command": "echo Hello"
